# Enum_vs_trait

./: Cargo.toml  Readme.md
benches/: enum_vs_trait.rs
src/: lib.rs  main.rs  qux_enum.rs  qux_genenum.rs  qux_generic.rs  qux_trait.rs
