[package]
name = "enum_vs_trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enum_vs_trait_lib"
path = "src/lib.rs"

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "enum_vs_trait"
harness = false